--- a/index.html
+++ b/index.html
@@ -18,5 +18,15 @@
                 <a href = '#'>Sign in</a>
             </div>
         </header>
+        <main>
+            <section class = 'offset section bg_light_gray wrap'>
+                <img src = './capstone_colmar_assets/images/banner.jpg' class = 'big_img'>
+                <div class = 'text_container'>
+                    <h1>Learn something<br>new everyday</h1>
+                    <h2>Lorem ipsum dolor sit amet,<br>consectetur adipiscint elit.</h2>
+                    <a href = '#'><div class = 'button'>Start here</div></a>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
