Added second section

--- a/index.html
+++ b/index.html
@@ -19,12 +19,53 @@
             </div>
         </header>
         <main>
-            <section class = 'offset section bg_light_gray wrap'>
+            <section class = 'offset section bg_light_gray flex_centering_vertically'>
                 <img src = './capstone_colmar_assets/images/banner.jpg' class = 'big_img'>
                 <div class = 'text_container'>
                     <h1>Learn something<br>new everyday</h1>
                     <h2>Lorem ipsum dolor sit amet,<br>consectetur adipiscint elit.</h2>
                     <a href = '#'><div class = 'button'>Start here</div></a>
+                </div>
+            </section>
+            <section class = 'section bg_white offset'>
+                <img src = './capstone_colmar_assets/images/information-main.jpg' class = 'big_img' style = 'margin: 32px 0;'>
+                <div class = 'text_container_v2' style = 'width: 60%; height: auto;'>
+                    <h2>It doesn't hurt to keep practicing</h2>
+                    <p style = 'margin: 24px 0 32px 0;'>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus,<br>
+                    nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam<br>
+                    eget magna laoreet, efficitur dolor consequat, tristique ligula."
+                    </p>
+                    <h5 style = 'margin-bottom: 32px;'>Emanuel, Sr Strategist at Hiring.com</h5>
+                </div>
+                <div class = 'little_images_section'>
+                    <div class = 'flex_item' style = 'border-bottom: rgb(129, 125, 125) 1px solid'>
+                        <img src = './capstone_colmar_assets/images/information-orientation.jpg'
+                        style = 'height: auto; width: 35%; padding: 20px 0 20px 20px;'>
+                        <div class = 'text_container'>
+                            <h2>Orientation date</h2>
+                            <h3 style = 'margin: 8px 0;'>Tue 10/11 & Wed 10/12: 8am-3pm</h3>
+                            <a style = 'color: rgb(41, 162, 202);' href = '#'><h4>Read more</h4></a>
+                        </div>
+                    </div>
+                    <div class = 'flex_item'>
+                        <img src = './capstone_colmar_assets/images/information-campus.jpg'
+                        style = 'height: auto; width: 35%; padding: 20px 0 20px 20px;'>
+                        <div class = 'text_container'>
+                            <h2>Our campus</h2>
+                            <h3 style = 'margin: 8px 0;'>Find which campus is close by you</h3>
+                            <a style = 'color: rgb(41, 162, 202);' href = '#'><h4>Read more</h4></a>
+                        </div>
+                    </div>
+                    <div class = 'flex_item bg_light_gray'>
+                        <img src = './capstone_colmar_assets/images/information-guest-lecture.jpg'
+                        style = 'height: auto; width: 35%; padding: 20px 0 20px 20px;'>
+                        <div class = 'text_container'>
+                            <h2>Our guest lecture</h2>
+                            <h3 style = 'margin: 8px 0;'>Join a keynote with Oliver Sack<br>
+                            about music medical treatment</h3>
+                            <a style = 'color: rgb(41, 162, 202);' href = '#'><h4>Read more</h4></a>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
