Added important fixes for footer display and for media query

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <a href = '#'>Sign in</a>
             </div>
         </header>
-        <main>
-            <section class = 'offset section bg_light_gray flex_centering_vertically' id = 'first_section' style = 'height: auto'>
+        <main class = 'offset'>
+            <section class = 'offset_v2 section bg_light_gray flex_centering_vertically' id = 'first_section' style = 'height: auto'>
                 <img src = './capstone_colmar_assets/images/banner.jpg' class = 'big_img'>
                 <div class = 'text_container'>
                     <h1>Learn something<br>new everyday</h1>
@@ -30,7 +30,7 @@
                     <a href = '#'><div class = 'button'>Start here</div></a>
                 </div>
             </section>
-            <section class = 'section bg_white offset' style = 'height: auto' id = 'second_section'>
+            <section class = 'section bg_white offset_v2' style = 'height: auto' id = 'second_section'>
                 <img src = './capstone_colmar_assets/images/information-main.jpg' class = 'big_img' style = 'margin: 32px 0;'>
                 <div class = 'text_container_v2' style = 'width: 60%; height: auto;'>
                     <h2>It doesn't hurt to keep practicing</h2>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
             </section>
-            <section class = 'section offset bg_light_gray' id = 'third_section'>
+            <section class = 'section offset_v2 bg_light_gray' id = 'third_section'>
                 <h1 style = 'padding: 32px 0; color: rgba(85, 81, 81, 0.979); text-align: center; font-size: 32px; font-family: Raleway, sans-serif;'>Start learning</h1>
                 <div class = 'grid'>
                     <div class = 'grid_item a bg_white'>
@@ -119,7 +119,7 @@
                     </div>
                 </div>
             </section>
-            <section class = 'section bg_white offset thesis_exhibit' id = 'fourth_section'>
+            <section class = 'section bg_white offset_v2 thesis_exhibit' id = 'fourth_section'>
                 <h1 style = 'padding: 32px 0; color: rgba(85, 81, 81, 0.979); text-align: center; font-size: 32px; font-family: Raleway, sans-serif;'>Thesis exhibit</h1>
                 <video src = './capstone_colmar_assets/videos/thesis.mp4' controls class = 'big_img' style = 'margin-top: 32px'></video>
                 <div class = 'text_container_v2' style = 'width: 60%; height: auto;'>
@@ -147,9 +147,9 @@
                         </div>
                     </div></a>
                 </div>
+            </section>
         </main>
-    </section>
-    <footer class = 'bg_white' id = 'footer'>
+    <footer class = 'bg_white offset' id = 'footer'>
         <h5 class = 'light_gray' style = 'padding: 16px 24px;'>&copy 2016 Colmar Academy. All rights reserved</h5>
         <div class = 'terms_and_privacy light_gray'>
             <a href = '#'><h5>Terms</h5></a>
